Task 2: add tweets.html with embedded tweet and link between pages

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,6 +14,8 @@
     <p>This is my first webpage as part of the ALX Software Engineering program.</p>
     <p>I'm learning how to use HTML to structure content properly.</p>
     <p>Each section on this page helps demonstrate different HTML tags.</p>
+     
+    <p><a href="tweets.html">Check out my favorite tweet →</a></p>
 
     <a href="https://www.alxafrica.com/" target="_blank">
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
