Task 3: Updated index.html and tweets.html with full structure

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,28 +1,40 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My First HTML Page</title>
+  <meta charset="UTF-8">
+  <title>My Tweets</title>
 </head>
 <body>
-    <h1> My favorite Tweet</h1>
 
-    <!-- Embed Tweet -->
-     
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Don’t compare your beginning to someone else’s middle. Keep going. 🚀</p>
-        &mdash; ALX (@alx_africa) 
-        <a href="https://twitter.com/alx_africa/status/1620793343536637952?ref_src=twsrc%5Etfw">February 1, 2023</a>
-    </blockquote> 
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-    <!-- Link back to homepage -->
-    <p><a href="index.html">← Back to homepage</a></p>
+  <main>
+    <article>
+      <h1>My Embedded Tweet</h1>
 
+      <!-- Embedded tweet -->
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">Just finished my first HTML task with ALX! 🚀 #SoftwareEngineering</p>&mdash; Caleb (@caleb_dev) 
+        <a href="https://x.com/alx_kenya/status/1945065403203416145?t=p96EOLR8krvhum5Z6P-EMA&s=19">July 17, 2025</a>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+      <p>Back to <a href="index.html">Home</a></p>
+    </article>
 
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
-
+  <footer>
+    <p>Made by Caleb Murero - <a href="https://yourlink.com" target="_blank">here</a></p>
+  </footer>
 
 </body>
 </html>
