--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My First HTML Page</title>
+  <meta charset="UTF-8">
+  <title>My First HTML Page</title>
 </head>
 <body>
 
-    <h1>Welcome to My First Webpage</h1>
-    <h2>About This Page</h2>
-    <h3>Why I Created It</h3>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-    <p>Hello, ALX!</p>
-    <p>This is my first webpage as part of the ALX Software Engineering program.</p>
-    <p>I'm learning how to use HTML to structure content properly.</p>
-    <p>Each section on this page helps demonstrate different HTML tags.</p>
-     
-    <p><a href="tweets.html">Check out my favorite tweet →</a></p>
+  <main>
+    <article>
+      <h1>Welcome to My First Webpage</h1>
+      <h2>About This Page</h2>
+      <h3>Why I Created It</h3>
 
-    <a href="https://www.alxafrica.com/" target="_blank">
+      <p>Hello, ALX!</p>
+      <p>This is my first webpage as part of the ALX Software Engineering program.</p>
+      <p>I'm learning how to use HTML to structure content properly.</p>
+      <p>Each section on this page helps demonstrate different HTML tags.</p>
+
+      <a href="https://www.alxafrica.com/" target="_blank">
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-    </a>
+      </a>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Caleb Murero - <a href="https://yourlink.com" target="_blank">here</a></p>
+  </footer>
 
 </body>
 </html>
