--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -27,6 +27,40 @@
       <a href="https://www.alxafrica.com/" target="_blank">
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
       </a>
+
+      <!--Table added here -->
+      <h2>Learners Information</h2>
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
     </article>
 
     <aside>
@@ -35,8 +69,4 @@
   </main>
 
   <footer>
-    <p>Made by Caleb Murero - <a href="https://yourlink.com" target="_blank">here</a></p>
-  </footer>
-
-</body>
-</html>
+    <p>Made by Caleb Murero - <a href="https://yourlink.com" target="_blank">here</a></
